--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
 
             	<div class="price-block primary">
 
-            		<div class="top-part" data-info="recommended">
+            		<div class="top-part" data-info="20% OFF JANUARY ONLY">
 
 	            		<h3 class="plan-title">Full Access</h3>
-		               <p class="plan-price"><sup>€</sup>125.00</p>
+		               <p class="plan-price"><sup>€</sup>100.00</p>
 		               <p class="price-month">Per month</p>
 							<p class="price-meta">Billed Annually.</p>
 
